load("@com_github_mvukov_rules_ros2//ros2:cc_defs.bzl", "ros2_cpp_binary")
load("@com_github_mvukov_rules_ros2//ros2:rust_interfaces.bzl", "rust_ros2_interface_library")
load("@rules_rust//rust:defs.bzl", "rust_binary")

ros2_cpp_binary(
    name = "talker",
    srcs = ["talker.cpp"],
    deps = [
        "@ros2_common_interfaces//:cpp_std_msgs",
        "@ros2_rclcpp//:rclcpp",
    ],
)

ros2_cpp_binary(
    name = "listener",
    srcs = ["listener.cpp"],
    deps = [
        "@ros2_common_interfaces//:cpp_std_msgs",
        "@ros2_rclcpp//:rclcpp",
    ],
)

rust_ros2_interface_library(
    name = "rust_std_msgs",
    deps = ["@ros2_common_interfaces//:std_msgs"],
)

rust_binary(
    name = "listener_rs",
    srcs = ["listener.rs"],
    edition = "2021",
    deps = [
        "@ros2_rust//:rclrs",
        ":rust_std_msgs",
        # "@rules_ros2_crate_index//:anyhow",
        "@rules_ros2_crate_index//:signal-hook",
    ],
)
